# autostep

./: .gitignore  README.md  pyproject.toml
.github/workflows/: CI.yml
automcmc/: autohmc.py  automcmc.py  autopcn.py  autorwmh.py  autostep.py  initialization.py  optimization.py  selectors.py  slicer.py  statistics.py  utils.py
autostep/: autohmc.py  automatic_mcmc.py  autopcn.py  autorwmh.py  autostep.py  initialization.py  optimization.py  preconditioning.py  selectors.py  slicer.py  statistics.py  tempering.py  utils.py
autosteppy/: autorwmh.py  autostep.py  selectors.py  statistics.py  stats.py  utils.py
tests/: test_AutoHMC.py  test_AutoRWMH.py  test_Kernels.py  test_initialization.py  test_preconditioning.py  test_selectors.py  test_tempering.py  test_utils.py  utils.py
