[project]
name = "autostep"
version = "0.1.0"
description = "A numpyro implementation of autoStep methods"
authors = [
    {name = "Miguel Biron-Lattes",email = "miguelbl9@gmail.com"}
]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpyro>=0.16.1",
]

[project.urls]
Repository = "https://github.com/UBC-Stat-ML/autostep.git"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
