[project]
name = "automcmc"
version = "0.1.0"
description = "A NumPyro-compatible JAX implementation of AutoStep and other automatically tuned samplers."
authors = [
    {name = "Miguel Biron-Lattes",email = "miguelbl9@gmail.com"}
]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jax",
    "numpyro",
    "optax",
    "tqdm"
]

[project.urls]
Repository = "https://github.com/UBC-Stat-ML/automcmc.git"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
